kube/deploy/apps/psono/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app psono
  namespace: *app
spec:
  endpointSelector: {}
  egress:
    # NTP
    - toCIDRSet:
        - cidr: "${IP_ROUTER_LAN}/32"
      toPorts:
        - ports:
            - port: "123"
              protocol: "UDP"
    # server-based MFA
    - toFQDNs:
        - matchName: "api*.duosecurity.com"
        - matchName: "api*.yubico.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: "TCP"
            - port: "443"
              protocol: "UDP"
